Updating Kotlin to 1.8.0 and Gradle to 8.0.2