@@ -30,6 +30,11 @@ project.ext.libraryDescription = "Annotation processor that generates SimpleJNI 
 
 targetCompatibility = JavaVersion.VERSION_1_8
 
+kotlin {
+    jvmToolchain(kotlinJvmTarget)
+}
+
+
 dependencies {
     compileOnly files("${System.properties['java.home']}/../lib/tools.jar")
 
@@ -48,29 +53,6 @@ sourceSets {
     main.resources.srcDirs = ['res']
     test.kotlin.srcDirs = ['test/src']
     test.resources.srcDirs = ['test/res']
-}
-
-if (JavaVersion.current() >= JavaVersion.VERSION_16) {
-    test {
-        jvmArgs(
-                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-                "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-                "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        )
-    }
-}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = kotlinJvmTarget
-    }
 }
 
 test {
@@ -94,8 +76,8 @@ task generateTestData(type: Test) {
     environment('JNIGEN_ENABLE_TEST_GENERATION', 'true')
 
     reports {
-        html.enabled false
-        junitXml.enabled = false
+        html.required = false
+        junitXml.required = false
     }
 }
 
@@ -118,12 +100,14 @@ javadoc {
 
 task sourceJar(type: Jar) {
     from sourceSets.main.allJava, sourceSets.main.kotlin
-    classifier "sources"
+    archiveClassifier.convention("sources")
+    archiveClassifier.set("sources")
 }
 
 task javadocJar(type: Jar) {
     from javadoc
-    classifier 'javadoc'
+    archiveClassifier.convention('javadoc')
+    archiveClassifier.set('javadoc')
 }
 
 apply from: '../publishing.gradle'
